--- a/app/src/main/res/layout/fragment_details__product.xml
+++ b/app/src/main/res/layout/fragment_details__product.xml
@@ -1,13 +1,285 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#fff"
+    android:id="@+id/rela"
     tools:context="com.example.ahmed.qusat.Fragments.Details_Product">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:id="@+id/ScrollView"
+        android:layout_height="match_parent">
 
-</FrameLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+    <ImageView
+        android:layout_width="@dimen/_200sdp"
+        android:layout_height="@dimen/_180sdp"
+        android:id="@+id/Image_product"
+        android:layout_marginTop="@dimen/_10sdp"
+        android:layout_centerHorizontal="true"
+        />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/Image_product"
+            android:layout_marginLeft="@dimen/_30sdp"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:id="@+id/T_Name"
+            android:textColor="#000"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/T_Name"
+            android:layout_marginLeft="@dimen/_30sdp"
+            android:layout_marginTop="@dimen/_15sdp"
+            android:id="@+id/T_Price"
+            android:textColor="#000"
+            />
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_3sdp"
+            android:background="#f2f2f2"
+            android:id="@+id/view"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:layout_below="@+id/T_Price"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/view"
+            android:layout_marginLeft="@dimen/_10sdp"
+            android:layout_marginTop="@dimen/_15sdp"
+            android:id="@+id/descrption"
+            android:textColor="#000"
+            android:text="@string/description"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@+id/descrption"
+            android:layout_marginLeft="@dimen/_10sdp"
+            android:layout_below="@+id/view"
+            android:layout_marginTop="@dimen/_15sdp"
+            android:id="@+id/T_Descrption"
+            android:maxLines="1"
+            android:textColor="#000"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/T_Descrption"
+            android:layout_marginLeft="@dimen/_10sdp"
+            android:layout_marginTop="@dimen/_15sdp"
+            android:id="@+id/model"
+            android:textColor="#000"
+            android:text="@string/modelproduct"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/T_Descrption"
+            android:layout_marginLeft="@dimen/_10sdp"
+            android:layout_marginTop="@dimen/_15sdp"
+            android:layout_toRightOf="@+id/model"
+            android:id="@+id/T_model"
+            android:textColor="#000"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/model"
+            android:layout_marginLeft="@dimen/_10sdp"
+            android:layout_marginTop="@dimen/_15sdp"
+            android:id="@+id/category"
+            android:textColor="#000"
+            android:text="@string/categoryname"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/model"
+            android:layout_marginLeft="@dimen/_10sdp"
+            android:layout_marginTop="@dimen/_15sdp"
+            android:layout_toRightOf="@+id/category"
+            android:id="@+id/T_Category"
+            android:textColor="#000"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/category"
+            android:layout_marginLeft="@dimen/_10sdp"
+            android:layout_marginTop="@dimen/_15sdp"
+            android:id="@+id/brand"
+            android:textColor="#000"
+            android:text="@string/brandname"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/category"
+            android:layout_marginLeft="@dimen/_10sdp"
+            android:layout_marginTop="@dimen/_15sdp"
+            android:layout_toRightOf="@+id/category"
+            android:id="@+id/T_Brand"
+            android:textColor="#000"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/brand"
+            android:layout_marginLeft="@dimen/_10sdp"
+            android:layout_marginTop="@dimen/_15sdp"
+            android:id="@+id/vendor"
+            android:textColor="#000"
+            android:text="@string/vendorname"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/brand"
+            android:layout_marginLeft="@dimen/_10sdp"
+            android:layout_marginTop="@dimen/_15sdp"
+            android:layout_toRightOf="@+id/category"
+            android:id="@+id/T_VendorName"
+            android:textColor="#000"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/vendor"
+            android:layout_marginLeft="@dimen/_10sdp"
+            android:layout_marginTop="@dimen/_15sdp"
+            android:id="@+id/vendorAddress"
+            android:textColor="#000"
+            android:text="@string/vendoraddress"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/vendor"
+            android:layout_marginLeft="@dimen/_10sdp"
+            android:layout_marginTop="@dimen/_15sdp"
+            android:layout_toRightOf="@+id/category"
+            android:id="@+id/T_VendorAddress"
+            android:textColor="#000"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/vendorAddress"
+            android:layout_marginLeft="@dimen/_10sdp"
+            android:layout_marginTop="@dimen/_15sdp"
+            android:id="@+id/vendorphone"
+            android:textColor="#000"
+            android:text="@string/vendorphone"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/vendorAddress"
+            android:layout_marginLeft="@dimen/_10sdp"
+            android:layout_marginTop="@dimen/_15sdp"
+            android:layout_toRightOf="@+id/category"
+            android:id="@+id/T_VendorPhone"
+            android:textColor="#000"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/vendorphone"
+            android:layout_marginLeft="@dimen/_20sdp"
+            android:layout_marginTop="@dimen/_15sdp"
+            android:id="@+id/payment"
+            android:textColor="#000"
+            android:text="@string/paymentsystem"
+            />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_40sdp"
+            android:layout_below="@+id/payment"
+            android:orientation="horizontal"
+            android:id="@+id/Linear"
+            android:layout_marginLeft="@dimen/_10sdp"
+            android:background="@drawable/bctable"
+            android:layout_marginTop="@dimen/_10sdp">
+
+            <TextView
+                android:layout_width="@dimen/_50sdp"
+                android:layout_gravity="center"
+                android:layout_height="wrap_content"
+                android:text="@string/price"
+                android:textColor="#000"
+                android:layout_marginLeft="@dimen/_20sdp"
+                />
+            <View
+                android:layout_width="@dimen/_3sdp"
+                android:layout_height="match_parent"
+                android:background="#f2f2f2"
+                />
+            <TextView
+                android:layout_width="@dimen/_70sdp"
+                android:layout_gravity="center"
+                android:layout_height="wrap_content"
+                android:text="@string/libraryname"
+                android:textColor="#000"
+                android:layout_marginLeft="@dimen/_10sdp"
+                />
+            <View
+                android:layout_width="@dimen/_3sdp"
+                android:layout_height="match_parent"
+                android:background="#f2f2f2"
+                android:layout_marginLeft="@dimen/_10sdp"
+                />
+            <TextView
+                android:layout_width="@dimen/_50sdp"
+                android:layout_gravity="center"
+                android:layout_height="wrap_content"
+                android:text="@string/month"
+                android:textColor="#000"
+                android:layout_marginLeft="@dimen/_10sdp"
+                />
+            <View
+                android:layout_width="@dimen/_3sdp"
+                android:layout_height="match_parent"
+                android:background="#f2f2f2"
+                android:layout_marginLeft="@dimen/_10sdp"
+                />
+
+            <TextView
+                android:layout_width="@dimen/_70sdp"
+                android:layout_gravity="center"
+                android:layout_height="wrap_content"
+                android:text="@string/year"
+                android:textColor="#000"
+                android:layout_marginLeft="@dimen/_10sdp"
+                />
+
+        </LinearLayout>
+
+        <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/swipe_Leons"
+            android:layout_width="match_parent"
+            android:layout_below="@+id/Linear"
+            android:layout_height="@dimen/_300sdp">
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycler_Leon"
+            android:scrollbars="vertical"
+            android:layout_marginRight="@dimen/_2sdp"
+            android:layout_marginLeft="@dimen/_2sdp"
+            android:layout_marginTop="@dimen/_2sdp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+
+    </android.support.v4.widget.SwipeRefreshLayout>
+
+    </RelativeLayout>
+    </ScrollView>
+</RelativeLayout>
