--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -6,5 +6,9 @@
     android:layout_height="match_parent"
     tools:context="com.example.ahmed.qusat.Activites.Second_Activity">
 
+    <FrameLayout
+        android:id="@+id/flContenttwo"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </RelativeLayout>
