--- a/app/src/main/res/layout/itemcategory.xml
+++ b/app/src/main/res/layout/itemcategory.xml
@@ -1,21 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="@dimen/_80sdp"
     android:layout_height="wrap_content">
+    <ProgressBar
+        android:layout_width="@dimen/_50sdp"
+        android:layout_height="@dimen/_50sdp"
+        android:visibility="invisible"
+        android:layout_marginLeft="@dimen/_10sdp"
+        android:id="@+id/Progrossbarcategory"
+        />
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/image_Product"
+        android:id="@+id/image_Category"
         android:layout_width="@dimen/_80sdp"
-        android:layout_height="@dimen/_60sdp"
-        android:visibility="visible"
+        android:layout_height="@dimen/_50sdp"
+        android:layout_centerHorizontal="true"
         />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:maxLines="1"
-        android:layout_below="@+id/image_Product"
-        android:layout_marginLeft="@dimen/_5sdp"
+        android:id="@+id/T_Name"
+        android:layout_marginTop="@dimen/_5sdp"
+        android:gravity="center"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/image_Category"
+        android:textColor="#000"
         android:layout_marginRight="@dimen/_5sdp"
         />
 
