--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -37,7 +37,6 @@
         android:textSize="@dimen/_22sdp"
         android:layout_marginTop="@dimen/_10sdp"
         android:layout_marginLeft="@dimen/_20sdp"
-        android:text="asdasd"
         android:textColor="#000"
         android:layout_marginRight="@dimen/_20sdp"
 
@@ -61,7 +60,6 @@
        android:layout_alignParentRight="true"
         android:layout_marginRight="@dimen/_20sdp"
         android:layout_alignTop="@+id/profile_gender"
-        android:text="Male"
         android:textColor="#000"
         android:textSize="@dimen/_15sdp" />
     <View
@@ -91,7 +89,7 @@
         android:layout_alignParentRight="true"
         android:layout_marginRight="@dimen/_20sdp"
         android:layout_alignTop="@+id/profile_phone"
-        android:text="010121254866"
+
         android:textColor="#000"
         android:textSize="@dimen/_15sdp" />
     <View
@@ -121,7 +119,7 @@
         android:layout_alignParentRight="true"
         android:layout_marginRight="@dimen/_20sdp"
         android:layout_alignTop="@+id/profile_remaining"
-        android:text="-52201.66"
+
         android:textColor="#000"
         android:textSize="@dimen/_15sdp" />
     <View
@@ -145,7 +143,7 @@
         android:id="@+id/profile_color"
         />
     <RelativeLayout
-        android:id="@+id/profile_white_color"
+        android:id="@+id/profile_status_colors"
         android:layout_width="@dimen/_60sdp"
         android:layout_height="@dimen/_30sdp"
         android:layout_alignParentRight="true"
