--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -9,24 +9,30 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-    <ImageView
-        android:layout_width="@dimen/_120sdp"
-        android:layout_height="@dimen/_140sdp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/_50sdp"
-        android:background="@drawable/logo"
-        android:id="@+id/logoQussat"
-        />
-      <EditText
-          android:layout_width="match_parent"
-          android:layout_height="@dimen/_40sdp"
-          android:layout_below="@+id/logoQussat"
-          android:layout_marginTop="@dimen/_30sdp"
-          android:layout_marginLeft="@dimen/_30sdp"
-          android:layout_marginRight="@dimen/_30sdp"
-          android:text="@string/email"
-          android:id="@+id/E_Email"
-          />
+        <ProgressBar
+            android:layout_width="@dimen/_55sdp"
+            android:layout_height="@dimen/_55sdp"
+            android:layout_centerInParent="true"
+            android:visibility="gone"
+            android:id="@+id/log_progressbar"/>
+        <ImageView
+            android:layout_width="@dimen/_120sdp"
+            android:layout_height="@dimen/_140sdp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="@dimen/_50sdp"
+            android:background="@drawable/logo"
+            android:id="@+id/logoQussat"
+            />
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_40sdp"
+            android:layout_below="@+id/logoQussat"
+            android:layout_marginTop="@dimen/_30sdp"
+            android:layout_marginLeft="@dimen/_30sdp"
+            android:layout_marginRight="@dimen/_30sdp"
+            android:hint="@string/email"
+            android:id="@+id/E_Email"
+            />
         <EditText
             android:layout_width="match_parent"
             android:layout_height="@dimen/_40sdp"
@@ -34,7 +40,7 @@
             android:layout_marginTop="@dimen/_10sdp"
             android:layout_marginLeft="@dimen/_30sdp"
             android:layout_marginRight="@dimen/_30sdp"
-            android:text="@string/password"
+            android:hint="@string/password"
             android:id="@+id/E_Password"
             />
         <Button
@@ -46,12 +52,14 @@
             android:layout_marginRight="@dimen/_60sdp"
             android:background="@drawable/bc_buttons"
             android:text="@string/signin"
+            android:textSize="@dimen/_16sdp"
             android:textColor="#044bff"
             android:id="@+id/btn_signin"
             android:textStyle="bold"
             />
 
         <TextView
+            android:id="@+id/text_create_account"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/btn_signin"
